# homeassistant-afvalwijzer

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  .ruff.toml  .strings.json  CONTRIBUTING.md  INFO.md  LICENSE  README.md  custom_updater.json  devcontainer.json  docker-compose.yml  hacs.json  info.md  manifest.json  mijnafvalwijzer_standalone_json.py  pyproject.toml  readme.md  requirements.txt  requirements_test.txt  setup.cfg  standalone_python_scraper  update_version.py  venv.sh
.devcontainer/: Dockerfile  configuration.yaml  custom_component_helper  devcontainer.json
.github/: SUPPORT.md  dependabot.yaml
config/: configuration.yaml
custom_components/: sensor.py  sensor_custom.py  sensor_provider.py  test.py  test_sensor.py
custom_components/afvalwijzer/tests/afvalwijzer_core/: README.md  __init__.py  const.py  core.py  model.py  pyproject.toml  repository.py  runner.py
custom_components/afvalwijzer/tests/afvalwijzer_core/collectors/: __init__.py  base.py  burgerportaal.py  factory.py  mijnafvalwijzer.py  opzet.py
scripts/: check-municipality-coverage  convert-zst-to-pkl  coverage  develop  download-addresses-Nederland  municipality-coverage  setup  test  test-module  test_tls.py
standalone_bash/: mijnafvalwijzer_standalone.sh  readme.md
standalone_python_json/: mijnafvalwijzer_standalone.py  mijnafvalwijzer_standalone_json.py  readme.md  readme.mijnafvalwijzer_standlone_json.md
standalone_python_scraper/: mijnafvalwijzer_scraper.py
tests/: __init__.py  check_municipality_coverage.py  conftest.py  test_calendar.py  test_data.py  (+12 more)
(+121 files in other folders)
