[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "afvalwijzer-core"
version = "0.1.0"
description = "Reusable core logic for Afvalwijzer collectors"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Bram van Dartel" }
]

dependencies = [
  "requests"
]

[tool.setuptools]
packages = ["afvalwijzer_core", "afvalwijzer_core.collectors"]
